kubernetes/kustomizations/opengym/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengym
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: "k3s.lab.smig.tech."
spec:
  tls:
    - hosts:
        - opengym.lab.smig.tech
      secretName: opengym-tls
  rules:
    - host: opengym.lab.smig.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengym-web
                port:
                  number: 80
